cabal-version: >=1.10

name: obelisk-google-analytics
version: 0.2.0.0
synopsis: Embed Google analytics scripts in obelisk projects
license: BSD3
license-file: LICENSE
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
category: Web
build-type: Simple
extra-source-files: CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules: Obelisk.Frontend.GoogleAnalytics
  build-depends:
      base
    , aeson
    , containers
    , exception-transformers
    , ghcjs-dom
    , jsaddle
    , mtl
    , obelisk-executable-config-lookup
    , obelisk-route
    , primitive
    , ref-tf
    , reflex
    , reflex-dom-core >= 0.7
    , text
    , transformers
    , unordered-containers
  default-language: Haskell2010
  ghc-options: -Wall
